# github-review-bot

./: .gitignore  README.md  action.yml  pyproject.toml  requirements.txt
.cursor/rules/: codebase-searches.mdc  function-interfaces.mdc  script-imports.mdc  unit-testing.mdc
.github/: PULL_REQUEST_TEMPLATE.md  bot-config.yml
.github/scripts/: ai_checks.py  api_checks.py  generate_review.py  load_config.py  parse_review_preference.py  post_comments.py  privacy_checks.py  run_analysis.py
.github/workflows/: code-review.yml
github_review_bot/: __init__.py  main.py
github_review_bot/scripts/: check_nextjs.py  check_vercel.py  generate_review.py  load_config.py  parse_review_preference.py  post_comments.py  run_analysis.py
github_review_bot/tests/: conftest.py  test_check_nextjs.py  test_check_vercel.py  test_generate_review.py  test_load_config.py  test_parse_review_preference.py  test_post_comments.py  test_run_analysis.py
github_review_bot/tests/fixtures/: bot_config.json
specs/: README.md  architecture.md  configuration.md  deployment.md  review-logic.md
